--- a/design_system/index.html
+++ b/design_system/index.html
@@ -204,60 +204,20 @@
   </div>
 
 
-  <div class="blankHM"></div>
 
-
-  <!-- Card -->
-  <div class="wrapper">
-    <div class="element">
-
-      <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="elementInner cardAPPOINTA">
-            <h4> <strong> Card title</strong> </h4>
-            <ul>
-              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. </li>
-              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. </li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-
-          <div class="elementInner cardAPPOINTA">
-            <h4> <strong> Card title</strong> </h4>
-            <ul>
-              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. </li>
-              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et
-                dolore magna aliqua. </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Card -->
   <div class="blankHM"></div>
 
   <!-- Color -->
   <div class="wrapper">
     <div class="element">
-      <p class="tArrow">Color <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      <p class="tArrow">Color<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="element">
       <h3>Brand Expression</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
     </div>
     <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
       <div class="Grid-cell">
@@ -297,15 +257,12 @@
       </div>
     </div>
     <div class="blankHS"></div>
-
     <div class="element">
       <h3>Action</h3>
     </div>
-
     <div class="Grid Grid--gutters Grid--cols-6 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-
           <div class="blockS colorLt shadowBox">HEX AAD9D9</div>
         </div>
       </div>
@@ -321,14 +278,15 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS colorAlet shadowBox">HEX 161616</div>
+          <div class="blockS colorWarm shadowBox">HEX fcf5eb</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="blockS blackLess displayNone">HEX 161616</div>
+          <div class="blockS colorAlet shadowBox">HEX 161616</div>
         </div>
       </div>
+
       <div class="Grid-cell">
         <div class="element">
           <div class="blockS blackLess displayNone">HEX 161616</div>
@@ -349,6 +307,8 @@
     <div class="element">
       <p class="tArrow">Elevation <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
       <div class="Grid-cell">
         <div class="element">
@@ -378,11 +338,12 @@
     <div class="element">
       <p class="tArrow">Font <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
+    <div class="blankHXS"></div>
+
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-
-          <h1> Font-family: Lato</h1>
+          <h3>Font-family: Lato</h3>
           <div class="blankHXS"></div>
           <h1>h1 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h1>
           <h2>h2 font-weight: 500, margin: top &#38; button 0.8em, Lorem ipsum dolor sit amet</h2>
@@ -390,12 +351,10 @@
           <h4>h4 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h4>
           <h5>h5 font-weight: 300, margin: top &#38; button 0.4em, Lorem ipsum dolor sit amet</h5>
           <h6>h6 font-weight: 300, margin: top &#38; button 0.3em, Lorem ipsum dolor sit amet</h6>
-          <div class="blankHS"></div>
-
+          <div class="blankHXS"></div>
           <strong>
             <h3>Bold, Lorem ipsum dolor sit amet</h3>
             <h3 class="allCaps">Bold &#38; Uppercase, Lorem ipsum dolor sit amet</h3>
-
           </strong>
 
           <p class="tArrow">specialText, Lorem ipsum dolor sit amet</p>
@@ -409,127 +368,82 @@
   </div>
   <!-- Font -->
   <div class="blankHM"></div>
-  <!-- icon, button -->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank"> <img class="intro-logo" src="../icon/in.svg"
-              alt="linkedin"></a>
-          <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/"> <img class="footer-logo"
-              src="../icon/in.svg" alt="linkedin"></a>
-        </div>
-      </div>
-    </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <a> <button class="buttonLanding arrButtonResume">Button
-              &nbsp; </button></a>
-
-          <a> <button class="button-35 DS">Button</button></a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <!-- icon, button -->
-  <div class="blankHM"></div>
-  <!-- note 1 -->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Note 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="Grid Grid--full wrapper">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class=" element colorBgGrey leftVerLine ">
-            <h4>
-
-              <p> <strong>Title h4</strong></p>
-              <ul>
-                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et dolore magna aliqua. </li>
-                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.</li>
-              </ul>
-              <p> <strong>Title h4</strong></p>
-              <ul>
-                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                  mollit anim id est laborum.</li>
-              </ul>
-            </h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- note 1 -->
-  <div class="blankHS"></div>
-
-  <!-- note 2 -->
-  <div class="wrapper">
-    <div class="element">
-      <p class="tArrow">Note 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-    </div>
-    <div class="Grid-cell">
-      <div class="element">
-        <div class="element">
-          <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-            do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          </p>
-
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- note 2 -->
   <!-- break points -->
   <div class="wrapper">
     <div class="element">
       <p class="tArrow">Break points <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
-
-
+    <div class="blankHXS"></div>
     <div class="Grid Grid--full u-textCenter">
+      <div class="element">
+        <h3>Monitor</h3>
+      </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="Demo  ">1880px</div>
+          <div class="Demo shadowBox">1880 px &#43;</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="Demo">1080px</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+    </div>
+    <div class="element">
+      <h3>Laptop</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Demo shadowBox">1080 px</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="Demo  ">680px</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+    </div>
+    <div class="element">
+      <h3>Tablet</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Demo shadowBox">680 px</div>
         </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="Demo  ">480px</div>
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS blackLess displayNone">HEX 161616</div>
+        </div>
+      </div>
+    </div>
+    <div class="element">
+      <h3>Mobile</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2 u-textCenter Grid--1of6">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="Demo shadowBox">480 px</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="blockS blackLess displayNone">HEX 161616</div>
         </div>
       </div>
     </div>
 
-
   </div>
   <!-- break points -->
-
-
   <div class="blankHM"></div>
   <!-- Grid -->
-
   <div class="wrapper">
     <div class="element">
       <p class="tArrow">Responsive grid <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
@@ -723,9 +637,7 @@
       </div>
     </div>
     <div class="blankHXS"></div>
-
-
-    <h3>Left / Center / Right content alignment</h3>
+    <h3>Left &#47; Center &#47; Right content alignment</h3>
     <div class="Grid Grid--gutters Grid--1of2">
       <div class="Grid-cell">
         <div class="elementDemo">
@@ -756,7 +668,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="blankHXS"></div>
 
     <h3>Nesting</h3>
@@ -845,12 +757,133 @@
       </div>
     </div>
 
-    <div class="blankHS"></div>
+    <div class="blankHM"></div>
 
 
+    <div class="blankHM"></div>
+    <!-- icon, button -->
+    <div class="wrapper">
+      <div class="element">
+        <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank"> <img class="intro-logo" src="../icon/in.svg"
+                alt="linkedin"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/"> <img class="footer-logo"
+                src="../icon/in.svg" alt="linkedin"></a>
+          </div>
+        </div>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="buttonLanding arrButtonResume">Button
+                &nbsp; </button></a>
+  
+            <a> <button class="button-35 DS">Button</button></a>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+    <!-- icon, button -->
+    <div class="blankHM"></div>
+    <!-- note 1 -->
+    <div class="wrapper">
+      <div class="element">
+        <p class="tArrow">Note 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="Grid Grid--full wrapper">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class=" element colorBgGrey leftVerLine ">
+              <h4>
+  
+                <p> <strong>Title h4</strong></p>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. </li>
+                  <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</li>
+                </ul>
+                <p> <strong>Title h4</strong></p>
+                <ul>
+                  <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit anim id est laborum.</li>
+                </ul>
+              </h4>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- note 1 -->
+    <div class="blankHM"></div>
+  
+    <!-- note 2 -->
+    <div class="wrapper">
+      <div class="element">
+        <p class="tArrow">Note 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="element">
+            <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+              do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+  
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- note 2 -->
 
-
-    <div class="blankHL"></div>
+    <!-- Card -->
+    <div class="wrapper">
+      <div class="element">
+        <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2">
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="elementInner cardAPPOINTA">
+              <h4> <strong> Card title</strong> </h4>
+              <ul>
+                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna aliqua. </li>
+                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna aliqua. </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <div class="elementInner cardAPPOINTA">
+              <h4> <strong> Card title</strong> </h4>
+              <ul>
+                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna aliqua. </li>
+                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et
+                  dolore magna aliqua. </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Card -->
+    <div class="blankHM"></div>
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
         <h5 class="element ">For more information please visit my website </h5>
@@ -858,17 +891,11 @@
       </div>
     </div>
     <div class="blankHL"></div>
-
-
-
-
   </div>
 
-  <!-- Grid -->
 
 
-  <!-- test -->
-
+ 
   <!-- The Modal -->
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">&times;</span>
