--- a/design_system/index.html
+++ b/design_system/index.html
@@ -448,6 +448,7 @@
     <div class="element">
       <p class="tArrow">Responsive grid <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
     </div>
+    <div class="blankHXS"></div>
     <div class="element">
       <h3>Basic Grid</h3>
     </div>
@@ -637,7 +638,9 @@
       </div>
     </div>
     <div class="blankHXS"></div>
-    <h3>Left &#47; Center &#47; Right content alignment</h3>
+    <div class="element">
+      <h3>Left &#47; Center &#47; Right content alignment</h3>
+    </div>
     <div class="Grid Grid--gutters Grid--1of2">
       <div class="Grid-cell">
         <div class="elementDemo">
@@ -668,10 +671,81 @@
         </div>
       </div>
     </div>
-
     <div class="blankHXS"></div>
+    <div class="element">
+      <h3>Vertical alignment</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3 Grid--top">
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">This cell should be <strong>top-aligned</strong>.</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
+            pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
+            mauris.In fermentum posuere urna nec.</div>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-3 Grid--center">
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">This cell should be <strong>center-aligned</strong>.</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
+            pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
+            mauris.In fermentum posuere urna nec. </div>
+        </div>
+      </div>
+    </div>
 
-    <h3>Nesting</h3>
+    <div class="Grid Grid--gutters Grid--cols-3 Grid--bottom">
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">This cell should be <strong>bottom-aligned</strong>.</div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="elementDemo">
+          <div class="Demo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Dolor sit amet consectetur adipiscing elit duis tristique. Diam vulputate ut
+            pharetra sit amet aliquam id diam maecenas. Dictumst quisque sagittis purus sit amet volutpat consequat
+            mauris.In fermentum posuere urna nec.</div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHXS"></div>
+    <div class="element">
+      <h3>Nesting</h3>
+    </div>
     <div class="Grid Grid--gutters Grid--1of3 Grid--nested">
       <div class="Grid-cell">
         <div class="elementDemo">
@@ -706,8 +780,9 @@
       </div>
     </div>
     <div class="blankHXS"></div>
-
-    <h3>Sidebar and main content</h3>
+    <div class="element">
+      <h3>Sidebar and main content</h3>
+    </div>
     <div class="Grid Grid--gutters Grid--1of6">
       <div class="Grid-cell">
         <div class="elementDemo">
@@ -756,146 +831,225 @@
         </div>
       </div>
     </div>
-
-    <div class="blankHM"></div>
-
-
     <div class="blankHM"></div>
     <!-- icon, button -->
     <div class="wrapper">
       <div class="element">
         <p class="tArrow">Icon &#38; button <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
       </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="element">
+        <h3>Icons</h3>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
         <div class="Grid-cell">
           <div class="element">
-            <a href="https://www.linkedin.com/in/vicky-wyq/" target="_blank"> <img class="intro-logo" src="../icon/in.svg"
-                alt="linkedin"></a>
-            <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/"> <img class="footer-logo"
-                src="../icon/in.svg" alt="linkedin"></a>
+            <a> <img class="intro-logo" src="../icon/in.svg" alt="linkedin"></a>
+            <a> <img class="intro-logo" src="../icon/ins.svg" alt="linkedin"></a>
+            <a> <img class="intro-logo" src="../icon/git.svg" alt="linkedin"></a>
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <img class="footer-logo" src="../icon/in.svg" alt="linkedin"></a>
+            <a> <img class="footer-logo" src="../icon/ins.svg" alt="linkedin"></a>
+            <a> <img class="footer-logo" src="../icon/git.svg" alt="linkedin"></a>
           </div>
         </div>
       </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="element">
+        <h3>Buttons</h3>
+      </div>
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
         <div class="Grid-cell">
           <div class="element">
-            <a> <button class="buttonLanding arrButtonResume">Button
+            <a> <button class="buttonLanding">Button
                 &nbsp; </button></a>
-  
+          </div>
+        </div>
+        <div class="Grid-cell">
+          <div class="element">
             <a> <button class="button-35 DS">Button</button></a>
           </div>
         </div>
+
+
       </div>
-  
-    </div>
-    <!-- icon, button -->
-    <div class="blankHM"></div>
-    <!-- note 1 -->
-    <div class="wrapper">
-      <div class="element">
-        <p class="tArrow">Note 1 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-      </div>
-      <div class="Grid Grid--full wrapper">
+      <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
         <div class="Grid-cell">
           <div class="element">
-            <div class=" element colorBgGrey leftVerLine ">
-              <h4>
-  
-                <p> <strong>Title h4</strong></p>
-                <ul>
-                  <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. </li>
-                  <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.</li>
-                </ul>
-                <p> <strong>Title h4</strong></p>
-                <ul>
-                  <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit anim id est laborum.</li>
-                </ul>
-              </h4>
-            </div>
+            <a> <button class="buttonLanding arrButton">Button</a>
+          </div>
+        </div>
+
+        <div class="Grid-cell">
+          <div class="element">
+            <a> <button class="button-35 DS arrButtonSmall">Button</button></a>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+  <!-- icon, button -->
+  <div class="blankHM"></div>
+  <!-- note-->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Note<img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="blankHXS"></div>
+    <div class="element">
+      <h3>Type 1</h3>
+    </div>
+
+    <div class="Grid Grid--full wrapper">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class=" element colorBgGrey leftVerLine ">
+            <h4>
+
+              <p> <strong>Title h4</strong></p>
+              <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                  et dolore magna aliqua. </li>
+                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</li>
+              </ul>
+              <p> <strong>Title h4</strong></p>
+              <ul>
+                <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+                  nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                  mollit anim id est laborum.</li>
+              </ul>
+            </h4>
           </div>
         </div>
       </div>
     </div>
-    <!-- note 1 -->
-    <div class="blankHM"></div>
-  
-    <!-- note 2 -->
-    <div class="wrapper">
+    <div class="blankHS"></div>
+
+    <div class="element">
+      <h3>Type 2</h3>
+    </div>
+    <div class="Grid-cell">
       <div class="element">
-        <p class="tArrow">Note 2 <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+        <div class="element">
+          <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+            do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- note-->
+  <div class="blankHM"></div>
+
+  <!-- Card -->
+  <div class="wrapper">
+    <div class="element">
+      <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
+    </div>
+    <div class="blankHXS"></div>
+
+    <div class="element">
+      <h3>Type 1</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardAPPOINTA">
+            <h4> <strong> Card title</strong> </h4>
+            <ul>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="element">
-            <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-              do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-  
+          <div class="elementInner cardAPPOINTA">
+            <h4> <strong> Card title</strong> </h4>
+            <ul>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
-    <!-- note 2 -->
+    <div class="blankHS"></div>
 
-    <!-- Card -->
-    <div class="wrapper">
-      <div class="element">
-        <p class="tArrow">Card <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow"></p>
-      </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner cardAPPOINTA">
-              <h4> <strong> Card title</strong> </h4>
-              <ul>
-                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna aliqua. </li>
-                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna aliqua. </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="Grid-cell">
-          <div class="element">
-            <div class="elementInner cardAPPOINTA">
-              <h4> <strong> Card title</strong> </h4>
-              <ul>
-                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna aliqua. </li>
-                <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                  et
-                  dolore magna aliqua. </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
+    <div class="element">
+      <h3>Type 2</h3>
     </div>
-    <!-- Card -->
-    <div class="blankHM"></div>
-    <div class="Grid Grid--full u-textCenter">
+    <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
-        <h5 class="element ">For more information please visit my website </h5>
-        <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+        <div class="element">
+          <div class="elementDemoCard">
+            <div class="elementInnerDemoCard heightS">
+              <div class="blankHXS"></div>
+              <h4> <strong> Title </strong> </h4>
+              <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+            </div>
+          </div>
+        </div>
       </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementDemoCard">
+            <div class="elementInnerDemoCard heightS">
+              <div class="blankHXS"></div>
+              <h4> <strong> Title </strong> </h4>
+              <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementDemoCard">
+            <div class="elementInnerDemoCard heightS">
+              <div class="blankHXS"></div>
+              <h4> <strong> Title </strong> </h4>
+              <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
+            </div>
+          </div>
+        </div>
+      </div>
+ 
     </div>
-    <div class="blankHL"></div>
+  </div>
+  <!-- Card -->
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <h5 class="element ">For more information please visit my website </h5>
+      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+    </div>
+  </div>
+  <div class="blankHL"></div>
   </div>
 
 
 
- 
+
   <!-- The Modal -->
   <div id="modal" class="modal">
     <span id="modal-close" class="modal-close">&times;</span>
