--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div class="element">
           <div class="elementCard float cardBorder">
             <div class="img__wrap">
-              <img class="img__img" src="./image/Cover_worksample.png" />
+              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png"/>
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="password">
